UIUX file writing

--- a/A11Y.md
+++ b/A11Y.md
@@ -1,1 +1,3 @@
-
+Using text inside of my logo made it so the logo could still be read by screen readers as it was not an image therefore making it more accessible.
+The tab button can also be used to acess all interactive elements/inputs hence increasing the accessbility.
+I've also made it very accessible for mobile devices throguh the use of styling
