--- a/A11Y.md
+++ b/A11Y.md
@@ -1,8 +1,9 @@
-Accessbility
+## Accessbility
 Using text inside of the logo made it so the logo could still be read by screen readers as it was not an image therefore making it more accessible.
 The tab button can also be used to acess all interactive elements/inputs hence increasing the accessbility.
 Furthermore the arrow keys can be used in order to navigate between pages.
 Applciation is very accessible for mobile devices through the use of styling with the screen resizing to fit the required display
 All images when added have the option to include alt text meaning that the users who are visually impaired are able to use the webpage.
 FUrthermore all buttons are labelled with what they acheive meaning that users who are visually impaired can use screen readers to still access the website.
+We have also included the use of a darkMode option inside of the navBar allowing users to switch between light and darkMode and any time on the application. This improves user accesbility as it reduces eye strain during nighttime use.
 
